--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,41 @@
     padding: 10px;
 }
 
-#grid-size {
+
+.grid-size-wrapper {
+    display: inline-block;
+    width: 40px;
+    height: 100px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.grid-button {
+    background-color: transparent;
+    display: inline-block;
+    font-size: 1.4em;
+    border: 0px;
+}
+
+.arrow-up:after {
+    content: '\25B2';
+}
+
+.arrow-down:after {
+    content: '\25BC';
+}
+
+.grid-size {
     display: inline-block;
     font-size: 1.2em;
     font-weight: bold;
+    margin: 0px 0px;
+    width: 100%;
+}
+
+
+.grid-or-sign {
+    font-size: 2em;
+    font-weight: bold;
+    line-height: 100px;
 }
