Added buttons to increase / decrease the grid size as a whole

--- a/css/style.css
+++ b/css/style.css
@@ -35,10 +35,11 @@
 
 .grid-size-wrapper {
     display: inline-block;
-    width: 40px;
-    height: 100px;
+    width: 80px;
+    height: 120px;
     text-align: center;
     vertical-align: middle;
+    position: relative;
 }
 
 .grid-button {
@@ -46,6 +47,12 @@
     display: inline-block;
     font-size: 1.4em;
     border: 0px;
+    position: absolute;
+    width: 34px;
+    height: 34px;
+}
+.grid-button:focus {
+    outline: 0;
 }
 
 .arrow-up:after {
@@ -56,12 +63,22 @@
     content: '\25BC';
 }
 
+.arrow-left:after {
+    content: '\25C0';
+}
+
+.arrow-right:after {
+    content: '\25B6';
+}
+
 .grid-size {
     display: inline-block;
     font-size: 1.2em;
     font-weight: bold;
     margin: 0px 0px;
-    width: 100%;
+    width: 44px;
+    height: 44px;
+    position: absolute;
 }
 
 
